# symmer

./: README.md  pyproject.toml
.github/workflows/: pull_request.yaml  testing_and_coverage.yaml
symmer/: process_handler.py  utils.py
symmer/approximate/: tensor_network.py
symmer/evolution/: variational_optimization.py
symmer/operators/: base.py  noncontextual_op.py
symmer/projection/: qubit_subspace_manager.py  qubit_tapering.py
tests/test_projection/: test_utils.py
