[tool.poetry]
name = "symmer"
version = "0.0.9"
description = ""
authors = ["AlexisRalli <rallilex@hotmail.co.uk>", "TimWeaving <weaving.timothy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.10, <4.0"
openfermion = "^1.6.1"
qiskit = "^1.2.4"
pydocstyle = "^6.1.1"
ncon = "^1.0.0"
opt-einsum = "^3.3.0"
numba = "0.58.1"
quimb = "^1.7.3"
ray = "2.10"
myst-nb = "^0.17.2"
scipy = ">1.14.0"

pytest = "^7.2.2"
[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^24.3.0"
isort = "^5.10.1"
sphinx-design = "^0.5.0"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
