[tool.poetry]
name = "symmer"
version = "0.0.9"
description = ""
authors = ["AlexisRalli <rallilex@hotmail.co.uk>", "TimWeaving <weaving.timothy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <4"
numpy = "^2.1"
scipy = "^1.15.0"
numba = "0.61.0"
qiskit = "^1.3.2"
cirq-core = "1.5.0.dev20250119140111"
openfermion = "^1.6.1"
pydocstyle = "^6.1.1"
ncon = "^1.0.0"
opt-einsum = "^3.3.0"
quimb = "^1.7.3"
myst-nb = "^0.17.2"
pytest = "^7.2.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^24.3.0"
isort = "^5.10.1"
sphinx-design = "^0.5.0"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
